<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextMeetingNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/meetingId"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextNickName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nickname"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/buttonJoinMeetingDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_meeting" />

</LinearLayout>