<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ScreenSharingActivity">

    <!-- 顶部栏 -->
    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp">

        <!-- 结束共享按钮 -->
        <ImageButton
            android:id="@+id/endShareButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/end_share"
            android:minHeight="48dp"
            android:src="@drawable/ic_return" />

        <!-- 会议主题文本 -->
        <TextView
            android:id="@+id/meetingTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/theme"
            android:textColor="#fff"
            android:textSize="20sp" />

    </LinearLayout>

    <!-- 中心文本内容 -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_screen"
        android:textSize="40sp"
        android:textColor="#888"
        android:fontFamily="monospace"
        android:layout_centerInParent="true" />

</RelativeLayout>