<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/textViewMeetingNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="会议号:" />

        <ImageButton
            android:id="@+id/buttonCopyMeetingNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="复制会议号"
            android:src="@drawable/ic_copy"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <EditText
        android:id="@+id/editTextMeetingTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/theme"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextNickName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nickname"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/buttonCreateMeetingDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_meeting" />

</LinearLayout>
